// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar badge 1`] = `
<div>
  <div
    class="p-avatar p-component p-avatar-image p-avatar-xl"
    data-pc-name="avatar"
    data-pc-section="root"
  >
    <img
      alt="avatar"
      data-pc-section="image"
      src="user.png"
    />
    <span
      class="p-badge p-component p-badge-no-gutter p-badge-danger"
      data-pc-name="badge"
      data-pc-section="root"
    >
      4
    </span>
  </div>
</div>
`;

exports[`Avatar default 1`] = `
<div>
  <div
    class="p-avatar p-component"
    data-pc-name="avatar"
    data-pc-section="root"
  />
</div>
`;

exports[`Avatar icon 1`] = `
<div>
  <div
    class="p-avatar p-component"
    data-pc-name="avatar"
    data-pc-section="root"
  >
    <span
      class="p-avatar-icon pi pi-search"
      data-pc-section="icon"
    />
  </div>
</div>
`;

exports[`Avatar image 1`] = `
<div>
  <div
    class="p-avatar p-component p-avatar-image"
    data-pc-name="avatar"
    data-pc-section="root"
  >
    <img
      alt="avatar"
      data-pc-section="image"
      src="user.png"
    />
  </div>
</div>
`;

exports[`Avatar label 1`] = `
<div>
  <div
    class="p-avatar p-component"
    data-pc-name="avatar"
    data-pc-section="root"
  >
    <span
      class="p-avatar-text"
      data-pc-section="label"
    >
      P
    </span>
  </div>
</div>
`;

exports[`Avatar shape cirle 1`] = `
<div>
  <div
    class="p-avatar p-component"
    data-pc-name="avatar"
    data-pc-section="root"
  />
</div>
`;

exports[`Avatar shape square 1`] = `
<div>
  <div
    class="p-avatar p-component"
    data-pc-name="avatar"
    data-pc-section="root"
  />
</div>
`;

exports[`Avatar size large 1`] = `
<div>
  <div
    class="p-avatar p-component p-avatar-lg"
    data-pc-name="avatar"
    data-pc-section="root"
  />
</div>
`;

exports[`Avatar size xlarge 1`] = `
<div>
  <div
    class="p-avatar p-component p-avatar-xl"
    data-pc-name="avatar"
    data-pc-section="root"
  />
</div>
`;

exports[`Avatar templating 1`] = `
<div>
  <div
    class="p-avatar p-component"
    data-pc-name="avatar"
    data-pc-section="root"
  >
    Content
  </div>
</div>
`;
